# azure-kinect-examples

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
opengl_viewer/: CMakeLists.txt
opengl_viewer/include/: k4adepthpixelcolorizer.h  k4aimgui_all.h  k4apixel.h  k4astaticimageproperties.h  texture.h  viewerutil.h  viewerwindow.h
opengl_viewer/src/: main.cpp  texture.cpp  viewerwindow.cpp
